--- a/styles/sass/_slotImages.scss
+++ b/styles/sass/_slotImages.scss
@@ -1,19 +1,21 @@
 .slots {
-    display:flex;
-    justify-content: center;
-    align-items:center ;
-    padding-top:70px;
-    padding-bottom:70px;
-    .slot1, .slot2, .slot3 {
-        height:100px;
-        margin:25px 0;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  .slot1,
+  .slot2,
+  .slot3 {
+    height: 100px;
+    margin: 25px 0;
+  }
 }
 
 img {
-    height:150px;
-    width:150px;
-    border-radius: 10px;
-    background-color: rgba(1, 3, 31, 0.8);
-    border: 1px solid darkblue;
+  height: 150px;
+  width: 150px;
+  border-radius: 10px;
+  background-color: rgba(1, 3, 31, 0.8);
+  border: 1px solid darkblue;
 }
