--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -18,6 +18,10 @@ $pinkColor: #ff0080;
 @import "mediaQueries";
 // SCSS imports
 
+body {
+  overflow: hidden;
+}
+
 .wrapper {
   max-width: 1200px;
   width: 80%;
@@ -79,9 +83,8 @@ footer {
   p {
     margin: 0 auto;
     font-size: 18px;
-    height: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    // height: 35px;
+    padding: 5px 0 6px 0;
   }
 }
 // H1 glow animation thanks to Val Head: https://codepen.io/valhead/pen/djHoD
